NEWS for the R Package Luminescence

Changes in version 0.4.2 (Feburary XX, 2015):

  New functions:

         • DUMMY

  Changes S4-objects, methods, classes:

         • ‘RLum.Analysis-class’:

             • Fix: Argument ‘keep.object == TRUE’ was not respected
               for the case after using the function
               ‘get_RLum.Analysis()’ the object just contained a single
               object. In such cases only the object itself, but no
               ‘RLum.Analysis’ object was returned (#200).

  Bugfixes and changes:

         • ‘plot_RLum.Analysis()’

             • Fix an error appeared for ‘combine = TRUE’ if only one
               single object was in the ‘RLum.Analysis’ object (#199),

             • added logical argument ‘plot.single’. In fact this just
               resets ‘ncols’ and ‘nrows’ to ‘1’ (#201).

Changes in version 0.4.1 (January 29th, 2015):

  New functions:

         • ‘merge_RLum.Data.Curve()’: Function allows merging of
           ‘RLum.Data.Curve’ objects in different ways (#128).

  Changes S4-objects, methods, classes:

         • ‘RLum.Analysis-class’:

             • Show warnings messages when empty object are produced by
               a ‘get_RLum.Analysis()’ request (implemented in get
               method and show method).

  Bugfixes and changes:

         • ‘analyse_SAR.CWOSL()’

             • rename argument ‘output.plot’ to ‘plot’,

             • rename argument ‘output.plot.single’ to ‘plot.single’,

             • rejection criteria added 'De > max. dose point'. These
               avoids that values are accepted even the De from the
               fitting should be considered as invalid.

         • ‘analyse_IRSAR.RF()’

             • Add enhanced support for ‘...’, e.g. ‘log’, ‘xlim’,
               ‘ylim’,

             • rename argument ‘output.plot’ to ‘plot’.

         • ‘analyse_pIRIRSequence()’

             • Fix an error that causes problems during plotting (Error